# settlement-llm

./: .env  .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
analysis/: evaluate.py  model.py
analysis/sql/: build_warehouse.py  queries.sql
courtpipe/: cli.py
data/reference-tables/: courtlistener_data_dictionary.csv
etl/: enrich_helpers.py  extract.py  features.py  load.py  transform.py
utils/: audit_citations.py  evaluate.py  logging_setup.py  run_context.py  validators.py
vis/: visualizations.py
