[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "courtpipe"
version = "0.1.0"
description = "CourtListener ETL + judicial outcome analytics pipeline"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
  "pandas>=2.0",
  "numpy<2",
  "requests>=2.31",
  "python-dotenv>=1.0",
  "scikit-learn>=1.3",
  "matplotlib>=3.7,<3.9",
  "urllib3>=2.0",
]

[project.scripts]
courtpipe = "courtpipe.cli:main"

[tool.setuptools]
packages = [
  "courtpipe",
  "etl",
  "analysis",
  "vis",
  "utils",
]